tests/valid/noInvalidIdentifier.ts
// @ts-nocheck
const start = 5;
const finish = 10;
const value = undefined;
const flag = true;
const result = false;
