tests/invalid/noInvalidIdentifier.ts
// @ts-nocheck
const end = 5;
const local = 10;
const nil = undefined;
const and = true;
const or = false;
const not = true;
const elseif = "test";
const repeat = 1;
const then = 2;
const until = 3;
